# wurdle

./: .gitignore  Cargo.toml  Makefile  README.md  build-disabled.rs  build.rs
api/: openapi.yaml
src/: main.rs
src/database/: http.rs  mod.rs
src/http/: server.rs
wurdle-server/: Cargo.toml
wurdle-server/api/: openapi.yaml
wurdle-server/src/: main.rs
wurdle-server/src/database/: http.rs  traits.rs
wurdle-server/src/http/: mod.rs  server.rs  traits.rs
wurdle-server/src/http/middlewares/: logger.rs
wurdle-server/src/session/: manager.rs  mod.rs  session.rs  traits.rs
